k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speaking-feedback
  labels:
    name: speaking-feedback
    app: speaking-feedback-tool
